fixed preview image overflowing

--- a/src/components/RecipeMultiStepForm/RecipeMultiStepForm.scss
+++ b/src/components/RecipeMultiStepForm/RecipeMultiStepForm.scss
@@ -489,6 +489,10 @@
     .title {
       margin-top: 0;
     }
+
+    img {
+      width: 100%;
+    }
   }
 }
 
